ci(synthetics): add kickoff job to manual wrapper for UI visibility [Droid-assisted]

--- a/.github/workflows/post-deploy-synthetics-manual.yml
+++ b/.github/workflows/post-deploy-synthetics-manual.yml
@@ -15,6 +15,12 @@ permissions:
   issues: write
 
 jobs:
+  kickoff:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Kickoff
+        run: echo "Manual wrapper started for ${{ github.repository }}@${{ github.ref_name }} (${GITHUB_SHA})"
+
   run:
     uses: profyt7/carelinkai/.github/workflows/post-deploy-synthetics-reusable.yml@main
     with:
