--- a/.github/workflows/post-deploy-synthetics-reusable.yml
+++ b/.github/workflows/post-deploy-synthetics-reusable.yml
@@ -140,7 +140,7 @@ jobs:
           }
 
       - name: Create or update GitHub issue
-        if: ${{ failure() }}
+        if: ${{ needs.ping.result == 'failure' }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
           TITLE: ${{ steps.compose.outputs.title }}
@@ -176,7 +176,7 @@ jobs:
           PY
 
       - name: Slack notify (optional)
-        if: ${{ failure() }}
+        if: ${{ needs.ping.result == 'failure' }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         shell: bash
