ci(synthetics): fix concurrency groups for repository_dispatch/workflow_run in reusable + manual [Droid]

--- a/.github/workflows/post-deploy-synthetics-manual.yml
+++ b/.github/workflows/post-deploy-synthetics-manual.yml
@@ -20,7 +20,7 @@ permissions:
   issues: write
 
 concurrency:
-  group: post-deploy-synthetics-manual-${{ github.ref }}
+  group: post-deploy-synthetics-manual-${{ github.ref || format('run-{0}', github.run_id) }}
   cancel-in-progress: false
 
 jobs:
