--- a/.github/workflows/post-deploy-synthetics-reusable.yml
+++ b/.github/workflows/post-deploy-synthetics-reusable.yml
@@ -15,7 +15,7 @@ permissions:
   issues: write
 
 concurrency:
-  group: post-deploy-synthetics-reusable-${{ github.ref }}
+  group: post-deploy-synthetics-reusable-${{ github.ref || format('run-{0}', github.run_id) }}
   cancel-in-progress: false
 
 jobs:
