--- a/.github/workflows/post-deploy-synthetics-entry2.yml
+++ b/.github/workflows/post-deploy-synthetics-entry2.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
     paths:
       - .github/workflows/post-deploy-synthetics-entry2.yml
+  schedule:
+    - cron: "0 3 * * *" # nightly at 03:00 UTC
   workflow_dispatch:
     inputs:
       simulate_failure:
