workflows(ephemeral): add push+schedule triggers for reliable runs [Droid-assisted]

--- a/.github/workflows/post-deploy-synthetics-ephemeral.yml
+++ b/.github/workflows/post-deploy-synthetics-ephemeral.yml
@@ -10,6 +10,12 @@ on:
         required: false
   repository_dispatch:
     types: [post-deploy-synthetics-ephemeral]
+  push:
+    branches: [main]
+    paths:
+      - '.github/workflows/post-deploy-synthetics-ephemeral.yml'
+  schedule:
+    - cron: '*/30 * * * *'
 
 jobs:
   ping:
